--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<h4>애플리케이션 다운로드</h4>
 				</div>
 				<div class="col s12 m6 center">
-					<a class="waves-effect waves-light btn grey darken-1" style="margin-top:15px;" href="https://creed.cf/download/CREED.CF%201.0.apk">Download for Android</a>
+					<a class="waves-effect waves-light btn grey darken-1" style="margin-top:15px;" href="https://drive.google.com/file/d/0BxNoUCgWm33fM0RNMV9WdnZBcHM/view?usp=sharing">Download for Android</a>
 				</div>
 				<div class="col s12 m6 center">
 					<a class="waves-effect waves-light btn disabled" style="margin-top:15px;" href="#">Download for iPhone</a>
