--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div class="section">
 			<div class="row">
 				<div class="col s12 m12">
-					웨스트민스터 소요리문답, 사도신경, 니케아신경, 콘스탄티노플신경, 칼케돈신조, 아타나시우스신경
+					웨스트민스터 소요리문답, 사도신경, 니케아신경, 콘스탄티노플신경, 칼케돈신조, 아타나시우스신경이 제공 중입니다
 				</div>
 			</div>
 		</div>
