--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript">
 		//페이지가 로드되면 실행한다.
-		$(document).ready( function() {
+//		$(document).ready( function() {
 			$("#navi-main").load("/navi-main.html");
-		});
+//		});
 	</script>
 
 	<div class="container" id="index-banner" style="padding: 0 20px;">
