--- a/index.html
+++ b/index.html
@@ -25,15 +25,6 @@
 	
 	<div id="navi-main"></div>
 
-	<!--  Scripts-->
-	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<script type="text/javascript">
-		//페이지가 로드되면 실행한다.
-//		$(document).ready( function() {
-			$("#navi-main").load("/navi-main.html");
-//		});
-	</script>
-
 	<div class="container" id="index-banner" style="padding: 0 20px;">
 		<br><br>
 		<h1 class="center blue-grey-text text-darken-2" style="letter-spacing:-2px;">Catechism & Confession</h1><br>
@@ -68,7 +59,14 @@
 
 	<div id="footer"></div>
 
-
+	<!--  Scripts-->
+	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<script type="text/javascript">
+		//페이지가 로드되면 실행한다.
+		$(document).ready( function() {
+			$("#navi-main").load("/navi-main.html");
+		});
+	</script>
 	<script type="text/javascript">
 		//페이지가 로드되면 실행한다.
 		$(document).ready( function() {
