--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
 	
 	<script src="/js/materialize.min.js"></script>
 	<script src="/js/init.js"></script>
-	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<!--	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+-->
 	
 	<!--  Scripts-->
 	
