--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 	<script type="text/javascript">
 		//페이지가 로드되면 실행한다.
 //		$(document).ready( function() {
+		alert('test');
 			$("#navi-main").load("/navi-main.html");
 //		});
 	</script>
