--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript">
 		//페이지가 로드되면 실행한다.
-//		$(document).ready( function() {
+		$(document).ready( function() {
 		alert('test');
 			$("#navi-main").load("/navi-main.html");
-//		});
+		});
 	</script>
 	<script type="text/javascript">
 		//페이지가 로드되면 실행한다.
