--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
 
 
 <body>
+	
+	<div id="loading">
+		<div class="preloader-wrapper big active">
+			<div class="spinner-layer spinner-blue-only">
+				<div class="circle-clipper left">
+					<div class="circle"></div>
+				</div><div class="gap-patch">
+					<div class="circle"></div>
+				</div><div class="circle-clipper right">
+					<div class="circle"></div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<div id="navi-main"></div>
 
