--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
 			$("#footer").load("/footer.html");
 		});
 	</script>
+	
+	<script type="text/javascript">
+		$(document).ready(function() {    
+			$('#loading').hide();  
+		});
+	</script>
 
 </body>
 
