--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
 	
-	<div id="loading">
+	<div id="loading" style="position:absolute;">
 		<div class="preloader-wrapper big active">
 			<div class="spinner-layer spinner-blue-only">
 				<div class="circle-clipper left">
