--- a/index.html
+++ b/index.html
@@ -7,46 +7,22 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
 
-
 	<title>CREED.CF</title>
 
 	<!-- CSS  -->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 	<link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-
+	
 	<meta property="og:description" content="요리문답과 신앙고백서">
 	<meta property="og:image" content="/link-img.jpg">
 </head>
+	
 
-
-
+	
 <body>
 	
-	<ul id="nav-mobile-1" class="side-nav" style="padding-left:0px">
-		<li><a href="/">첫페이지로</a></li>
-		<li><a href="#">요리문답서<i class="material-icons right">arrow_drop_down</i></a>
-			<ul class="" style="padding-left:16px;">
-				<li><a href="/cat/shorter">웨스트민스터 소요리문답</a></li>
-	<!--			<li><a href="/catechism/westminster-larger">웨스트민스터 대요리문답</a></li>-->
-				<li><a href="/cat/heidelberg">하이델베르그 요리문답 (준비중)</a></li>
-	<!-- 			<li><a href="/catechism/geneva">제네바 요리문답</a></li> -->
-			</ul>
-		</li>
-		<li><a href="#">신앙고백서<i class="material-icons right">arrow_drop_down</i></a>
-			<ul class="" style="padding-left:16px;">
-				<li><a href="/cf/apostles">사도신경</a></li>
-				<li><a href="/cf/nicene">니케아 신경</a></li>
-				<li><a href="/cf/constantinople">콘스탄티노플 신경</a></li>
-				<li><a href="/cf/chalcedon">칼케돈 신조</a></li>
-				<li><a href="/cf/athanasian">아타나시우스 신경</a></li>
-	<!-- 			<li><a href="/confession/belgic-confession-of-faith">벨직 신앙고백서</a></li> -->
-	<!-- 			<li><a href="/confession/the-second-helvetic-confession">제2 스위스 신앙고백서</a></li> -->
-	<!-- 			<li><a href="/confession/canons-of-dort">도르트 신경</a></li> -->
-	<!-- 			<li><a href="/confession/westminster-confession-of-faith">웨스트민스터 신앙고백서</a></li> -->
-			</ul>
-		</li>
-	</ul>
+	<div id="navi-main"></div>
 	
 	<div class="navbar-fixed">
 		<nav class="grey darken-2" role="navigation">
@@ -56,18 +32,19 @@
 		</nav>
 	</div>
 
+
 	<div class="container" id="index-banner" style="padding: 0 20px;">
 		<br><br>
 		<h1 class="center blue-grey-text text-darken-2" style="letter-spacing:-2px;">Catechism & Confession</h1><br>
 		<p class="col s12 light center">믿음의 선배들이 가르쳤고 고백했던 요리문답과 신앙고백들을 탐독하시어 신앙의 유익을 얻으시면 좋겠습니다.</p>
 		<br><br>
 	</div>
-
+	
 	<div class="container contents">
 		<div class="section">
 			<div class="row">
 				<div class="col s12 m12">
-					웨스트민스터 소요리문답, 사도신경, 니케아신경, 콘스탄티노플신경, 칼케돈신조, 아타나시우스신경이 제공 중입니다
+					웨스트민스터 소요리문답, 사도신경, 니케아신경, 콘스탄티노플신경, 칼케돈신조, 아타나시우스신경
 				</div>
 			</div>
 		</div>
@@ -79,7 +56,7 @@
 					<h4>애플리케이션 다운로드</h4>
 				</div>
 				<div class="col s12 m6 center">
-					<a class="waves-effect waves-light btn grey darken-1" style="margin-top:15px;" target="_blank" href="https://drive.google.com/file/d/0BxNoUCgWm33fM0RNMV9WdnZBcHM/view?usp=sharing">Download for Android</a>
+					<a class="waves-effect waves-light btn grey darken-1" style="margin-top:15px;" href="https://creed.cf/download/CREED.CF%201.0.apk" target="_blank">Download for Android</a>
 				</div>
 				<div class="col s12 m6 center">
 					<a class="waves-effect waves-light btn disabled" style="margin-top:15px;" href="#">Download for iPhone</a>
@@ -90,30 +67,21 @@
 
 	<div id="footer"></div>
 
-<!--
-	<script src="/js/materialize.min.js"></script>
-	<script src="/js/init.js"></script>
--->
-
 	<!--  Scripts-->
 	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<!--
 	<script type="text/javascript">
 		//페이지가 로드되면 실행한다.
 		$(document).ready( function() {
 			$("#navi-main").load("/navi-main.html");
 		});
 	</script>
--->
+	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript">
 		//페이지가 로드되면 실행한다.
 		$(document).ready( function() {
 			$("#footer").load("/footer.html");
 		});
 	</script>
-	
-	<script src="/js/init.js"></script>
-	<script src="/js/materialize.min.js"></script>
 	
 </body>
 
