--- a/cat/shorter/index.html
+++ b/cat/shorter/index.html
@@ -2034,7 +2034,7 @@
 	
 	<script type="text/javascript">
 		$(document).ready( function() {
-			$("#navi-sub").load("/navi-sub.html");
+			$("#navi-sub").load("/navi-main.html");
 		});
 	</script>
 	<script type="text/javascript">
