--- a/cat/heidelberg/working.html
+++ b/cat/heidelberg/working.html
@@ -187,7 +187,16 @@
 			</ul>
 		</li>
 	</ul>
-	<div id="navi-sub"></div>
+	<div id="navi-main"></div>
+    
+    <div class="navbar-fixed">
+        <nav class="grey darken-2" role="navigation">
+            <div class="nav-wrapper container"><a id="logo-container" href="#top" class="brand-logo center">CREED.CF</a>
+                <a href="#" data-activates="nav-mobile-1" class="button-collapse"><i class="material-icons">menu</i></a>
+                <a href="#" data-activates="nav-mobile-2" class="right button-collapse-2"><i class="material-icons">list</i></a>
+            </div>
+        </nav>
+    </div>
 	
 	<div class="container" id="index-banner">
 		<br><br>
@@ -2344,11 +2353,10 @@
 	<div id="footer"></div>
 
 	<!--  Scripts-->
-
 	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript">
 		$(document).ready( function() {
-			$("#navi-sub").load("/navi-sub.html");
+			$("#navi-main").load("/navi-main.html");
 		});
 	</script>
 	<script type="text/javascript">
@@ -2356,7 +2364,7 @@
 			$("#footer").load("/footer.html");
 		});
 	</script>
-
+	
 	<script src="https://cdn.jsdelivr.net/clipboard.js/1.6.0/clipboard.min.js"></script>
 	<script>
 		var clipboard = new Clipboard('.clipboard');
@@ -2372,6 +2380,8 @@
 		});
 		
 	</script>
+	<script src="/js/materialize.js"></script>
+	<script src="/js/init.js"></script>
 
 </body>
 
