--- a/cf/chalcedon/index.html
+++ b/cf/chalcedon/index.html
@@ -21,7 +21,17 @@
 		<li><a href="#s3">3. 라틴어 번역</a></li>
 		<li><a href="#s4">4. 그리스어 원문</a></li>
 	</ul>
-	<div id="navi-sub"></div>
+
+	<div id="navi-main"></div>
+    
+    <div class="navbar-fixed">
+        <nav class="grey darken-2" role="navigation">
+            <div class="nav-wrapper container"><a id="logo-container" href="#top" class="brand-logo center">CREED.CF</a>
+                <a href="#" data-activates="nav-mobile-1" class="button-collapse"><i class="material-icons">menu</i></a>
+                <a href="#" data-activates="nav-mobile-2" class="right button-collapse-2"><i class="material-icons">list</i></a>
+            </div>
+        </nav>
+    </div>
 
   	<div class="container" id="index-banner" style="padding: 0 20px;">
 		<br><br>
@@ -86,17 +96,17 @@
 	<!--  Scripts-->
 	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript">
-		//페이지가 로드되면 실행한다.
 		$(document).ready( function() {
-			$("#navi-sub").load("/navi-sub.html");
+			$("#navi-main").load("/navi-main.html");
 		});
 	</script>
 	<script type="text/javascript">
-		//페이지가 로드되면 실행한다.
 		$(document).ready( function() {
 			$("#footer").load("/footer.html");
 		});
 	</script>
+	<script src="/js/materialize.js"></script>
+	<script src="/js/init.js"></script>
 
 </body>
 
