--- a/navi-sub.html
+++ b/navi-sub.html
@@ -23,16 +23,16 @@
 	</li>
 </ul>
 
-<div class="navbar-fixed">
-	<nav class="grey darken-2" role="navigation">
-		<div class="nav-wrapper container"><a id="logo-container" href="#top" class="brand-logo center">CREED.CF</a>
-			<a href="#" data-activates="nav-mobile-1" class="button-collapse"><i class="material-icons">menu</i></a>
-			<a href="#" data-activates="nav-mobile-2" class="right button-collapse-2"><i class="material-icons">list</i></a>
-		</div>
-	</nav>
-</div>
+    <div class="navbar-fixed">
+        <nav class="grey darken-2" role="navigation">
+            <div class="nav-wrapper container"><a id="logo-container" href="#top" class="brand-logo center">CREED.CF</a>
+                <a href="#" data-activates="nav-mobile-1" class="button-collapse"><i class="material-icons">menu</i></a>
+                <a href="#" data-activates="nav-mobile-2" class="right button-collapse-2"><i class="material-icons">list</i></a>
+            </div>
+        </nav>
+    </div>
 
-<script src="/js/materialize.js"></script>
+<script src="/js/materialize.min.js"></script>
 <script src="/js/init.js"></script>
 
 	<script type="text/javascript">
