--- a/cat/shorter/index.html
+++ b/cat/shorter/index.html
@@ -17,6 +17,7 @@
 
 <body oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
 <div id="top"></div>
+
 	<ul id="nav-mobile-2" class="side-nav" style="padding-left:0px">
 		<li><a class="center" href="#top">웨스트민스터 소요리문답</a></li>
 <select class="browser-default" onchange="self.location.href=this.value">
@@ -150,7 +151,8 @@
 		<li><a href="#s19">19. 은혜의 수단; 기도 <small>98문</small></a></li>
 		<li><a href="#s20">20. 주기도문 <small>99-107문</small></a></li>
 	</ul>
-	<div id="navi-sub"></div>
+    
+	<div id="navi-main"></div>
     
     <div class="navbar-fixed">
         <nav class="grey darken-2" role="navigation">
@@ -2031,7 +2033,6 @@
 
 	<!--  Scripts-->
 	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-	
 	<script type="text/javascript">
 		$(document).ready( function() {
 			$("#navi-main").load("/navi-main.html");
@@ -2058,6 +2059,8 @@
 		});
 		
 	</script>
+	<script src="/js/materialize.js"></script>
+	<script src="/js/init.js"></script>
 
 </body>
 
