--- a/cat/heidelberg/working.html
+++ b/cat/heidelberg/working.html
@@ -2350,7 +2350,7 @@
 	<div class="container" style="text-align:right;">© CREED.CF (CREED.CF에서 번역됨)</div>
 	<br><br>
 
-	<div id="footer"></div>
+	<footer id="footer" class="page-footer grey darken-1"></footer>
 
 	<!--  Scripts-->
 	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
