--- a/cf/apostles/index.html
+++ b/cf/apostles/index.html
@@ -223,7 +223,7 @@
 	</div>
 	<br>
 
-	<div id="footer"></div>
+	<footer id="footer" class="page-footer grey darken-1"></footer>
 
 	<!--  Scripts-->
 	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
