--- a/cat/shorter/index.html
+++ b/cat/shorter/index.html
@@ -40,7 +40,7 @@
 
 	<ul id="nav-mobile-2" class="side-nav" style="padding-left:0px">
 		<li><a class="center" href="#top">웨스트민스터 소요리문답</a></li>
-<select class="browser-default" onchange="self.location.href=this.value">
+<select class="browser-default center" onchange="self.location.href=this.value" style="margin: auto; width: 95%; border: 1px dotted #999; border-radius: 10px;">
 	<option value=""disabled selected>문답 바로가기</option>
 	<option value="#qa1">1문답</option>
 	<option value="#qa2">2문답</option>
